# sirius

./: .gitignore  CMakeLists.txt  README.md
include/sirius/arith/: rect.hpp  size.hpp  vector.hpp
include/sirius/core/: api.def.h  buffer_config.hpp  decoder.hpp  dispatchable.hpp  drawable.hpp  error.hpp  index_buffer_info.hpp  initialize.hpp  make.hpp  memory_management.fwd.hpp  memory_management.hpp  memory_management.inl  memory_operation.hpp  memory_policy.hpp  push_constant_buffer_info.hpp  render_instance.hpp  render_instance.inl  render_process.hpp  render_process.inl  render_process_core.hpp  render_process_pointers.hpp  render_stage.hpp  shader_stage.hpp  window.hpp  window.inl
include/sirius/graphics/core/: texture.hpp  texture_info.hpp
include/sirius/input/: event_function.hpp  info.hpp  map_types.hpp
include/sirius/timeline/: acquire_image.hpp  begin_draw_phase.hpp  copy_buffer_data.hpp  dedicated_command_group.hpp  dispatch.hpp  draw.hpp  end_draw_phase.hpp  fill.hpp  move_buffer_data.hpp  resize.hpp  state.hpp  submit.inl
include/sirius/timeline/predefined_callbacks/: update_swap_extent.hpp
include/sirius/traits/: vector_traits.hpp  vk_traits.hpp
include/sirius/vulkan/core/: command_buffer.fwd.hpp  command_buffer.hpp  command_buffer.inl  command_pool.hpp  function_table.hpp  instance.hpp  mixin.hpp  unique_vk_ptr.hpp  vulkan.hpp  vulkan_handle.hpp  vulkan_handle_deleter.hpp  vulkan_ptr.hpp
include/sirius/vulkan/device/: device_query_traits.hpp  device_type.hpp  extension.hpp  feature.hpp  logical_device.hpp  physical_device.hpp  queue_family_info.hpp
include/sirius/vulkan/display/: color_space.hpp  depth_image.hpp  display_format.hpp  image_sampler.hpp  image_view.hpp  pixel_format.hpp  pixel_format_mapping.hpp  present_mode.hpp  surface.hpp  swap_chain.hpp
include/sirius/vulkan/memory/: allocation_counts.hpp  allocator.fwd.hpp  allocator.hpp  asset_heap.fwd.hpp  asset_heap.hpp  asset_heap.inl  asset_heap_allocation_group.hpp  asset_heap_group.hpp  asset_usage_policy.hpp  bind_point.hpp  buffer.fwd.hpp  buffer.hpp  buffer.inl  buffer_allocation.hpp  buffer_group.hpp  descriptor_info.hpp  descriptor_pool.hpp  descriptor_set.hpp  descriptor_set_layout.hpp  device_allocation.inl  device_allocation_segment.hpp  device_allocation_segment.inl  generic_allocation.hpp  image.hpp  image_allocation.hpp  pipeline.hpp  pipeline.inl  pipeline_layout.hpp  pipeline_layout.inl  shader_module.hpp  shader_module.inl
include/sirius/vulkan/sync/: fence.hpp  semaphore.hpp
pkgconfig/: sirius.pc.in
shaders/: texture_rect.frag
src/sirius/core/: initialize.cpp  window.cpp
src/sirius/vulkan/core/: command_pool.cpp  decoder.cpp  function_table.cpp  instance.cpp  vulkan.cpp
src/sirius/vulkan/device/: logical_device.cpp  physical_device.cpp
src/sirius/vulkan/display/: depth_image.cpp  image_sampler.cpp  image_view.cpp  surface.cpp  swap_chain.cpp
src/sirius/vulkan/memory/: allocator.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  image.cpp
src/sirius/vulkan/sync/: fence.cpp  semaphore.cpp
test/: CMakeLists.txt  buffer_config_table.hpp  generate_rects.hpp  push_constants.hpp  styled_rect.hpp  test_application.cpp  test_arithmetic_types.cpp  texture_rect.hpp  timeline.hpp
